<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4C4F80D"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="#EBE60F">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#6D3BF379"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:src="@drawable/yongki" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="Yongki Yudha Prasetya"
                android:textColor="#161616"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/text_pt"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/jurusan"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/angkatan"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/folower"
            android:textColor="#062BF3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="50dp"
            android:text="@string/folowing"
            android:textColor="#062BF3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/activity"
            android:textColor="#062BF3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="445"
            android:textColor="#062BF3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="15dp"
            android:text="500"
            android:textColor="#062BF3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="100"
            android:textColor="#062BF3"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="480dp"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="-410dp"
        android:background="#77DB7B">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_home_black_24dp"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_settings_phone_black_24dp"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/ic_assignment_ind_black_24dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="120dp"
            android:text="Jl Semeru Rt 17 RW 05 Desa Mangunrejo"
            android:textColor="#161616"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="120dp"
            android:text="082234966086"
            android:textColor="#161616"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:layout_marginLeft="120dp"
            android:text="1718043"
            android:textColor="#161616"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>




</LinearLayout>